--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-
 <div class="bgColor">
   My App
- 
-  
 
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <app-todos></app-todos>
 </div>
