--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -2,6 +2,8 @@
   <div class="row">
     <div class="input-group mb-3">
       <input
+        #inpt
+        [value]="editItem?.title || ''"
         type="text"
         class="form-control"
         placeholder="Todo"
@@ -9,13 +11,33 @@
         aria-describedby="basic-addon1"
       />
       <div class="input-group-prepend">
-        <button class="btn btn-secondary">Add</button>
+        <button
+          [hidden]="!editMode"
+          class="btn btn-info"
+          (click)="update(inpt)"
+        >
+          Güncelle
+        </button>
+        <button [disabled]="editMode" class="btn btn-secondary" (click)="add()">
+          Ekle
+        </button>
       </div>
     </div>
   </div>
   <div class="row">
     <ul class="list-group" *ngFor="let todo of data">
-      <li class="list-group-item">{{ todo.title }}</li>
+      <li class="list-group-item d-flex justify-content-between">
+        <div>
+          {{ todo.title }}
+        </div>
+
+        <div>
+          <button class="btn btn-primary" (click)="edit(todo.id)">
+            Düzenle
+          </button>
+          <button class="btn btn-close m-2"></button>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
